tests/ui/subscription_event_non_exhaustive_requires_wildcard.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/subscription_event_non_exhaustive_requires_wildcard.rs:13:23
   |
13 |     let _kind = match event {
   |                       ^^^^^ pattern `_` not covered
   |
note: `SubscriptionEvent` defined here
  --> src/api/subscribe.rs
   |
   | pub enum SubscriptionEvent {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `SubscriptionEvent`
   = note: `SubscriptionEvent` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
17 ~         SubscriptionEvent::Unknown { .. } => "unknown",
18 ~         _ => todo!(),
   |
